Fix some tests and add model
