# common/src/main/java/com/bakdata/quick/common/api/model/manager/creation/TopicCreationData.java
@@ -31,5 +31,6 @@ public class TopicCreationData implements CreationData {
     GatewaySchema valueSchema;
     GatewaySchema keySchema;
     Duration retentionTime;
+    boolean point;
     String rangeFiled;
 }
