# openapi/spec/schemas.yaml
@@ -83,6 +83,10 @@ components:
           $ref: '#/components/schemas/GatewaySchema'
         retentionTime:
           type: string # ISO-8601
+        point:
+          type: boolean
+        rangeField:
+          type: string
 
     SchemaData:
       type: object
